fixed text align on homepage

--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -267,9 +267,10 @@ box-shadow: 0px 10px 30px rgba(0,0,0,0.10);
     justify-content: center;
   }
 
-  .link-to-trainers{
+  .trainers-outro{
     font-size: 40px;
     color: white;
+    text-align: center;
   }
 
   /*---------------------------------------
@@ -512,6 +513,15 @@ box-shadow: 0px 10px 30px rgba(0,0,0,0.10);
   ---------------------------------------*/
   .trainers-roles .flexbox-item{
     width: 90%;
+  }
+
+  /*---------------------------------------
+    Homepage - Contact
+  ---------------------------------------*/
+  .contact-info{
+  display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   /*---------------------------------------
